fixed alignment

--- a/styles/header.module.css
+++ b/styles/header.module.css
@@ -8,7 +8,8 @@
 
 #title {
   font-weight: bold;
-  padding: 12px 25px;
+  margin: 12px 50px;
+  margin-left: 0;
 }
 
 .nav {
